[gd_scene load_steps=9 format=3 uid="uid://1ptob48exeuy"]

[ext_resource type="Script" path="res://pong/pong.gd" id="1_hbi5j"]
[ext_resource type="PackedScene" uid="uid://dkpbxjrkl7naq" path="res://pong/player_a.tscn" id="1_n4fkl"]
[ext_resource type="PackedScene" uid="uid://b80yjsm6xtjyq" path="res://pong/border.tscn" id="2_7dxg8"]
[ext_resource type="PackedScene" uid="uid://ck0vsegb2eibd" path="res://pong/player_b.tscn" id="3_4tarp"]
[ext_resource type="PackedScene" uid="uid://c07o8t1303bam" path="res://pong/ball.tscn" id="4_q7taj"]
[ext_resource type="AudioStream" uid="uid://ccw5rgkah4sg2" path="res://pong/blip.wav" id="6_3rxxd"]
[ext_resource type="FontFile" uid="uid://dgovmrkyywhjf" path="res://pong/monogram.ttf" id="6_6idqo"]
[ext_resource type="AudioStream" uid="uid://bx5p585d4qtuw" path="res://pong/short_blip.wav" id="7_6oyh0"]

[node name="Pong" type="Node2D"]
script = ExtResource("1_hbi5j")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3rxxd")
pitch_scale = 2.0

[node name="PlayerA" parent="." instance=ExtResource("1_n4fkl")]
position = Vector2(29, 338)

[node name="Border Up" parent="." instance=ExtResource("2_7dxg8")]

[node name="Border Down" parent="." instance=ExtResource("2_7dxg8")]
position = Vector2(-7, 631)

[node name="PlayerB" parent="." instance=ExtResource("3_4tarp")]
position = Vector2(1116, 335)
ai_player = true

[node name="Ball" parent="." instance=ExtResource("4_q7taj")]
position = Vector2(0, 8)
scale = Vector2(0.5, 0.5)

[node name="ShortBlipSound" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource("7_6oyh0")
pitch_scale = 2.0

[node name="LabelA" type="Label" parent="."]
offset_left = 411.0
offset_top = 60.0
offset_right = 481.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("6_6idqo")
theme_override_font_sizes/font_size = 80
text = "0"

[node name="LabelB" type="Label" parent="."]
offset_left = 714.0
offset_top = 60.0
offset_right = 784.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("6_6idqo")
theme_override_font_sizes/font_size = 80
text = "0"
